# mediawiki-xml2sql

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  Makefile.vc  README  config.h.in  config.h.vc  configure  configure.ac  keywords  md5.c  md5.h  mediawiki.c  missing.h  random.c  st.c  st.h  xml2sql.c
getopt/: Makefile.am  Makefile.in
win32/: 7zip.cpp  README.txt  convert.cpp  decomp.cpp  pch.cpp  pch.h  resource.h  xml2sql-fe.cpp  xml2sql-fe.exe.manifest  xml2sql-fe.h  xml2sql-fe.rc  xml2sql-fe.sln  xml2sql-fe.vcproj
